--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,7 @@ nav:
 - Home: index.md
 - Conditional Product Options: conditional-product-options.md
 - Frequently Bought Together: frequently-bought-together.md
+- Shipping Estimator on Product Page: shipping-estimator.md
 theme: readthedocs
 use_directory_urls: false
 
