Add link to color swatches addon instruction

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ nav:
 - Conditional Product Options: conditional-product-options.md
 - Frequently Bought Together: frequently-bought-together.md
 - Shipping Estimator on Product Page: shipping-estimator.md
+- Display Color Swatches on Product Items: color-swatches.md
 theme: readthedocs
 use_directory_urls: false
 
