--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
 - Frequently Bought Together: frequently-bought-together.md
 - Shipping Estimator on Product Page: shipping-estimator.md
 - Display Color Swatches on Product Items: color-swatches.md
+- Mutiple Category Dependent Dropdowns: mutiple-category-dependent-dropdowns.md
 theme: readthedocs
 use_directory_urls: false
 
