--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,8 +5,9 @@ nav:
 - Frequently Bought Together: frequently-bought-together.md
 - Shipping Estimator on Product Page: shipping-estimator.md
 - Display Color Swatches on Product Items: color-swatches.md
-- Mutiple Category Dependent Dropdowns: mutiple-category-dependent-dropdowns.md
+- Mutiple Category Dependent Dropdowns: multiple-category-dependent-dropdowns.md
 - Mutiple Quantity Product Options: multiple-quantity-product-options.md
+- Custom Popups: popups.md
 theme: readthedocs
 use_directory_urls: false
 
