add menu Automatically Add Additional Product To Cart

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
 - Mutiple Category Dependent Dropdowns: multiple-category-dependent-dropdowns.md
 - Mutiple Quantity Product Options: multiple-quantity-product-options.md
 - Custom Popups: popups.md
+- Automatically Add Additional Product To Cart: add-product-to-cart-automatically.md
 theme: readthedocs
 use_directory_urls: false
 
