--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
 - Mutiple Quantity Product Options: multiple-quantity-product-options.md
 - Custom Popups: popups.md
 - Automatically Add Additional Product To Cart: add-product-to-cart-automatically.md
+- Sell By Pack: sell-by-pack.md
 theme: readthedocs
 use_directory_urls: false
 
