--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
 - Display Color Swatches on Product Items: color-swatches.md
 - Mutiple Category Dependent Dropdowns: multiple-category-dependent-dropdowns.md
 - Mutiple Quantity Product Options: multiple-quantity-product-options.md
+- Product Pick List Price: product-pick-list-price.md
 - Custom Popups: popups.md
 - Automatically Add Additional Product To Cart: add-product-to-cart-automatically.md
 - Sell By Pack: sell-by-pack.md
