--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
 - Custom Popups: popups.md
 - Automatically Add Additional Product To Cart: add-product-to-cart-automatically.md
 - Sell By Pack: sell-by-pack.md
+- Shipment Details: shipment-details.md
 theme: readthedocs
 use_directory_urls: false
 
