Limit Countries + Qty In Cart

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,8 @@ nav:
 - Automatically Add Additional Product To Cart: add-product-to-cart-automatically.md
 - Sell By Pack: sell-by-pack.md
 - Shipment Details: shipment-details.md
+- Limit Countries / States: limit-countries.md
+- Quantity In Cart: quantity-in-cart.md
 theme: readthedocs
 use_directory_urls: false
 
