file upload, shop by child sku addons

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,8 @@ nav:
 - Display Free Shipping Badges: free-shipping-badges.md
 - Add Shipping Option Your Customer's Shipping Account: customer-account-shipping-option.md
 - Better Product Reorder: better-reorder.md
+- Add File Upload Field on Registration Page: file-upload.md
+- Select product variants by SKU: shop-by-child-sku.html
 theme: readthedocs
 use_directory_urls: false
 
