--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,7 @@ nav:
 - Better Product Reorder: better-reorder.md
 - Add File Upload Field on Registration Page: file-upload.md
 - Select product variants by SKU: shop-by-child-sku.md
+- HTML5 Video Image Gallery: html5-video-image-gallery.md
 theme: readthedocs
 use_directory_urls: false
 
