Delete Cart addon

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
 - HTML5 Video Image Gallery: html5-video-image-gallery.md
 - Display Product Weight on Cart Page: cart-weight.md
 - Order Multiple SKUs: order-multiple-skus.md
+- Delete Cart: delete-cart.md
 theme: readthedocs
 use_directory_urls: false
 
