Checkout Payment Method Customizations

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
 - Order Multiple SKUs: order-multiple-skus.md
 - Delete Cart: delete-cart.md
 - Restrict Shipping Countries on Specific Products: restrict-shipping-countries-on-specific-products.md
+- Checkout Payment Method Customizations: checkout-payment-method-customizations.md
 theme: readthedocs
 use_directory_urls: false
 
