--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,7 @@ nav:
 - Delete Cart: delete-cart.md
 - Restrict Shipping Countries on Specific Products: restrict-shipping-countries-on-specific-products.md
 - Checkout Payment Method Customizations: checkout-payment-method-customizations.md
+- Display Brand Logo on PDP: brand-logo-on-pdp.md
 theme: readthedocs
 use_directory_urls: false
 
