--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,8 @@ nav:
 - Restrict Shipping Countries on Specific Products: restrict-shipping-countries-on-specific-products.md
 - Checkout Payment Method Customizations: checkout-payment-method-customizations.md
 - Display Brand Logo on PDP: brand-logo-on-pdp.md
+- Tooltips for Product Options: product-option-tooltip.md
+- Image Gallery for Product Options: variant-image-gallery.md
 theme: readthedocs
 use_directory_urls: false
 
