# Product Review Images

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,7 @@ nav:
 - Display Brand Logo on PDP: brand-logo-on-pdp.md
 - Tooltips for Product Options: product-option-tooltip.md
 - Image Gallery for Product Options: variant-image-gallery.md
+- Product Review Images: product-review-images.md
 theme: readthedocs
 use_directory_urls: false
 
