--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ nav:
 - Tooltips for Product Options: product-option-tooltip.md
 - Image Gallery for Product Options: variant-image-gallery.md
 - Product Review Images: product-review-images.md
+- Hide Price for Non-Logged In Customers: hide-price.md
 theme: readthedocs
 use_directory_urls: false
 
