--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ nav:
 - Image Gallery for Product Options: variant-image-gallery.md
 - Product Review Images: product-review-images.md
 - Hide Price for Non-Logged In Customers: hide-price.md
+- Hide Product Option Values based on Customer Groups: hide-option-values-based-on-customer-groups.md
 theme: readthedocs
 use_directory_urls: false
 
