igat-variants-table

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,7 @@ nav:
 - Prevent Purchase Low Stock Products: prevent-purchase-low-stock.md
 - Product Card Lowest Price: product-card-lowest-price.md
 - Minimum Order Amount & Minimum Category Quantity: category-minimum-quantity.md
+- IGAT Variants Table: igat-variants-table.md
 theme: readthedocs
 use_directory_urls: false
 
