--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ nav:
 - IGAT Variants Table: igat-variants-table.md
 - Multi Storefronts Global Login: multi-storefronts-global-login.md
 - Papersushishop Expected Shipping Date: papersushishop-expected-shipping-date.md
+- Add Back to Category button on the cart page: back-to-category.md
 theme: readthedocs
 use_directory_urls: false
 
