--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,6 +41,7 @@ nav:
 - Multi Storefronts Global Login: multi-storefronts-global-login.md
 - Papersushishop Expected Shipping Date: papersushishop-expected-shipping-date.md
 - Add Back to Category button on the cart page: back-to-category.md
+- Shipping Countdown: shipping-countdown.md
 theme: readthedocs
 use_directory_urls: false
 
