msf-universal-login

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,7 @@ nav:
 - Minimum Order Amount & Minimum Category Quantity: category-minimum-quantity.md
 - IGAT Variants Table: igat-variants-table.md
 - Multi Storefronts Global Login: multi-storefronts-global-login.md
+- Multi Storefronts Universal Login Automatically: msf-universal-login.md
 - Papersushishop Expected Shipping Date: papersushishop-expected-shipping-date.md
 - Add Back to Category button on the cart page: back-to-category.md
 - Shipping Countdown: shipping-countdown.md
