Product Card Badges

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,7 @@ nav:
 - Papersushishop Expected Shipping Date: papersushishop-expected-shipping-date.md
 - Add Back to Category button on the cart page: back-to-category.md
 - Shipping Countdown: shipping-countdown.md
+- Product Card Badges: product-card-badges.md
 theme: readthedocs
 use_directory_urls: false
 
