--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ nav:
 - Add Back to Category button on the cart page: back-to-category.md
 - Shipping Countdown: shipping-countdown.md
 - Product Card Badges: product-card-badges.md
+- Product Bundles: product-bundles.md
 theme: readthedocs
 use_directory_urls: false
 
