Checkout Signature Delivery addon

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,7 @@ nav:
 - Shipping Countdown: shipping-countdown.md
 - Product Card Badges: product-card-badges.md
 - Product Bundles: product-bundles.md
+- Add Signature on Delivery on Checkout Page: checkout-signature-delivery.md
 theme: readthedocs
 use_directory_urls: false
 
