Hide product prices based on specific brands

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ nav:
 - Image Gallery for Product Options: variant-image-gallery.md
 - Product Review Images: product-review-images.md
 - Hide Price for Non-Logged In Customers: hide-price.md
+- Hide product prices based on specific brands: hide-price-by-brand.md
 - Hide Product Option Values based on Customer Groups: hide-option-values-based-on-customer-groups.md
 - Pre-Select Product Options Sharing Link: preselect-product-option-link.md
 - Prevent Purchase Low Stock Products: prevent-purchase-low-stock.md
