Checkout File Upload

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,6 +49,7 @@ nav:
 - Product Bundles: product-bundles.md
 - Add Signature on Delivery on Checkout Page: checkout-signature-delivery.md
 - Display product PriceList-based price vs. regular price: wholesale-discount-price.md
+- Checkout File Upload: checkout-file-upload.md
 theme: readthedocs
 use_directory_urls: false
 
