--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,6 +57,7 @@ nav:
 - Shipment Details: shipment-details.md
 - Shipping Countdown: shipping-countdown.md
 - Shipping Estimator on Product Page: shipping-estimator.md
+- Stock Filter: stock-filter.md
 - Tooltips for Product Options: product-option-tooltip.md
 theme: readthedocs
 use_directory_urls: false
