New doc bundle associated product tabs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
 - Apparel Product Options: apparel-product-options.md
 - Automatically Add Additional Product To Cart: add-product-to-cart-automatically.md
 - Automatically Add Product to Cart Based on Customer Group: add-product-to-cart-automatically-based-on-customer-group.md
+- Bundle Product Tabs on a Product Detail Page: bundle-product-tabs.md
 - Better Product Reorder: better-reorder.md
 - Bulk Pricing Option: bulk-pricing-option.md
 - Bulk Pricing Variants: bulk-pricing-variants.md
