--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
 - Add File Upload Field on Registration Page: file-upload.md
 - Add Shipping Option Your Customer's Shipping Account: customer-account-shipping-option.md
 - Add Signature on Delivery on Checkout Page: checkout-signature-delivery.md
+- Add to Cart Child Products from Product Pick List: add-child-products-picklist.md
 - Apparel Product Options: apparel-product-options.md
 - Automatically Add Additional Product To Cart: add-product-to-cart-automatically.md
 - Automatically Add Product to Cart Based on Customer Group: add-product-to-cart-automatically-based-on-customer-group.md
@@ -50,6 +51,7 @@ nav:
 - Product Card Lowest Price: product-card-lowest-price.md
 - Product Card Unit Price: product-card-unit-price.md
 - Product Designer: product-designer.md
+- Product Pick List Dropdown and Price: product-pick-list-dropdown-and-price.md
 - Product Pick List Price: product-pick-list-price.md
 - Product Review Images: product-review-images.md
 - Quantity In Cart: quantity-in-cart.md
