Add display SKU, stock & price on variant options documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,7 @@ nav:
 - Product Pick List Dropdown and Price: product-pick-list-dropdown-and-price.md
 - Product Pick List Price: product-pick-list-price.md
 - Product Review Images: product-review-images.md
+- Display SKU, Stock & Price on Product Variant Options: display-sku-stock-price-variant-options.md
 - Quantity In Cart: quantity-in-cart.md
 - Restrict Shipping Countries on Specific Products: restrict-shipping-countries-on-specific-products.md
 - Rolls Calculator: rolls-calculator.md
